<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_toolbar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/profile_button"
            style="@style/ToolbarActionButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/menu_btn_description"
            android:onClick="openDrawer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hamburger"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/profile_title"
            style="@style/ViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ProfileLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profile_name_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:fontFamily="@font/nunitosans_bold"
                android:text="@string/name"
                android:textColor="?attr/colorPrimary"
                android:textSize="22sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight=".2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_name_text"
                    style="@style/TaskEntryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight=".8"
                    android:gravity="center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/profile_name_edit_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/profile_name_edit_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight=".3"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_selector_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_name_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name">

            <EditText
                android:id="@+id/profile_name_edit_text"
                style="@style/UserProfileInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight=".8"
                android:backgroundTint="@android:color/black"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_name_edit_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/profile_name_edit_save"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight=".3"
                android:adjustViewBounds="true"
                android:background="@drawable/button_tick_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/profile_mail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name_edit">

            <TextView
                android:id="@+id/profile_mail_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:fontFamily="@font/nunitosans_bold"
                android:text="@string/e_mail"
                android:textColor="?attr/colorPrimary"
                android:textSize="22sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight=".2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_mail_text"
                    style="@style/TaskEntryText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight=".8"
                    android:gravity="center_vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/profile_mail_edit_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/profile_mail_edit_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight=".3"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_selector_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_mail_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_mail">

            <EditText
                android:id="@+id/profile_mail_edit_text"
                style="@style/UserProfileInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight=".8"
                android:backgroundTint="@android:color/black"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/custom_cursor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profile_mail_edit_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/profile_mail_edit_save"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight=".3"
                android:adjustViewBounds="true"
                android:background="@drawable/button_tick_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/profile_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_mail_edit">

            <Button
                android:id="@+id/profile_pwd_edit_btn"
                style="@style/TaskSaveButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                android:text="@string/modify_password" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/profile_pwd_edit_text"
                    style="@style/UserProfileInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:backgroundTint="@android:color/black"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/profile_pwd_edit_save"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/profile_pwd_edit_save"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight=".3"
                    android:adjustViewBounds="true"
                    android:background="@drawable/button_tick_selector"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>