<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/alert_dialog_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:backgroundTint="@color/dark_grey"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:hint="example@mail.com"
        android:autofillHints="@string/title_todo" />

    <EditText
        android:id="@+id/alert_dialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:backgroundTint="@color/dark_grey"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:hint="password"
        android:autofillHints="@string/title_todo" />

</LinearLayout>