<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list_selection"
            android:icon="@drawable/tick"
            android:title="@string/menu_todo_lists" />

        <item
            android:id="@+id/nav_note_selection"
            android:icon="@drawable/note"
            android:title="@string/menu_notes" />
    </group>

    <item android:title="Settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_credits"
                    android:icon="@drawable/credits"
                    android:title="@string/credits" />
            </group>
        </menu>
    </item>
</menu>