...
    app:startDestination="@+id/nav_list_selection">

    <fragment
        android:id="@+id/nav_list_selection"
        android:name="com.github.steroidteam.todolist.view.ListSelectionFragment"
        android:label="@string/menu_todo_lists"
        tools:layout="@layout/fragment_list_selection" >
        <action
            android:id="@+id/action_nav_list_selection_to_nav_item_view"
            app:destination="@id/nav_item_view" />
    </fragment>

    <fragment
...
        tools:layout="@layout/fragment_daily_planning" />

    <fragment
        android:id="@+id/nav_note_selection"
        android:name="com.github.steroidteam.todolist.view.NoteSelectionFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_note_selection" >
        <action
            android:id="@+id/action_nav_note_selection_to_nav_note_display"
            app:destination="@id/nav_note_display" />
    </fragment>

    <fragment
...
